--- a/M2A1_614978/mis_peliculas.html
+++ b/M2A1_614978/mis_peliculas.html
@@ -61,7 +61,7 @@
         <br>
 
         <div class = "monstersinc">
-            <ol><h2>3. Monsters Inc.</h2></ol>
+            <ol><h2>3. Monsters, Inc.</h2></ol>
             
             <p><ol>La aventura de un pequeño desliz entre los mejores amigos de Monsters Incorporated en la ciudad de Monstropolis.</p></ol>
 
