--- a/M2A1_614978/mis_peliculas.html
+++ b/M2A1_614978/mis_peliculas.html
@@ -73,7 +73,7 @@
                 <br>
                 <strong>Duración:</strong> 92 min.</p></ol>
             
-            <ol><img src = 'monstersinc.png' title = "Monsters Inc." alt = "Monsters Inc." width = 290></ol>
+            <ol><img src = 'monstersinc.png' title = "Monsters, Inc." alt = "Monsters Inc." width = 290></ol>
             
             <ol><a href="https://youtu.be/6tCxnHCqqxg" target="_blank" title="Monsters Inc."> 
                 <button class = "boton">Tráiler.</button>
